--- a/test/test.html
+++ b/test/test.html
@@ -98,7 +98,7 @@
 							"ht.getSearchPart('a','?aa=1&a=2&cc=3') ==='2' && \n" +
 							"ht.getSearchPart('d','?aa=1&a=2&cc=3') ===null",
 		
-		//------------------------------------------------------------------------------------------------------------
+		//============================================================================================================
 		
 		"bindByName()":
 						"ht('divResult3').innerHTML='\\\n"+
@@ -159,6 +159,20 @@
 						"	<label><input name=sp-display-chk2 id=\\'sp-display-chk2-id\\' type=checkbox ></input> show</label>\\\n"+
 						"	<span class=ht-cmd onclick=\\\"ht(\\\'sp-display-chk2-id\\\').checked=true\\\">set true</span>\\\n"+
 						"	<span class=ht-cmd onclick=\\\"ht(\\\'sp-display-chk2-id\\\').checked=false\\\">set false</span> <br>\\\n"+
+						"\\\n"+
+						"	<span name=sp-display2 id=sp-display2-id >888</span>, \\\n"+
+						"	<span class=ht-cmd onclick=\\'alert(myObj.dis_v2)\\'>get v</span> \\\n"+
+						"	<span class=ht-cmd onclick=\\\"myObj.dis_v2=true\\\">set v2=true</span> \\\n"+
+						"	<span class=ht-cmd onclick=\\\"myObj.dis_v2=false\\\">set v2=fase</span> \\\n"+
+						"	<span class=ht-cmd onclick=\\\"alert(ht(\\\'sp-display2-id\\\').style.display)\\\">get style</span> \\\n"+
+						"	<span class=ht-cmd onclick=\\\"ht(\\\'sp-display2-id\\\').style.display= \\\'none\\\';\\\">set style=none</span> \\\n"+
+						"	<span class=ht-cmd onclick=\\\"ht(\\\'sp-display2-id\\\').style.display= \\\'\\\';\\\" style=\\'margin-right:2em;\\'>set style=</span>  //boolean value<br>\\\n"+
+						"\\\n"+
+						"	<label><input name=sp-display2-chk id=\\'sp-display2-chk-id\\' type=checkbox ></input> hide</label> \\\n"+
+						"	<label><input name=sp-display2-chk2 id=\\'sp-display2-chk2-id\\' type=checkbox ></input> show</label>\\\n"+
+						"	<span class=ht-cmd onclick=\\\"ht(\\\'sp-display2-chk2-id\\\').checked=true\\\">set true</span>\\\n"+
+						"	<span class=ht-cmd onclick=\\\"ht(\\\'sp-display2-chk2-id\\\').checked=false\\\">set false</span><br>\\\n"+
+						
 							
 						"<br><br><br>';\n"+
 						"\n"+
@@ -167,6 +181,7 @@
 						"	attr_title: 'aaaaaa',\n"+
 						"	inp_v: 'bbb',\n"+
 						"	dis_v: '',\n"+
+						"	dis_v2: false,\n"+
 						"};\n"+
 						"window.myObj=myObj;\n"+
 						"\n"+
@@ -188,6 +203,10 @@
 						"	['sp-display'	,'style'		,'display'	,'dis_v',	true ],\n"+
 						"	['sp-display-chk'	,'prop'		,'checked'	,'dis_v',	{ biDirection:true, valueMapper:{true:'none',false:''}} ],\n"+
 						"	['sp-display-chk2'	,'prop'		,{typeItem:'checked',valueMapper:{'':true,'none':false}}	,'dis_v',	{ biDirection:true, watchJs:true, valueMapper:{true:'',false:'none'}} ],\n"+
+						"\n"+
+						"	['sp-display2'	,'style'		,{typeItem:'display',valueMapper:{false:'none',true:''}}	,'dis_v2',	{ biDirection:true, valueMapper:{'none':false,'':true}} ],\n"+
+						"	['sp-display2-chk'	,'prop'		,{typeItem:'checked',valueMapper:{true:false,false:true}}	,'dis_v2',	{ biDirection:true, valueMapper:{true:false,false:true}} ],\n"+
+						"	['sp-display2-chk2'	,'prop'		,'checked'	,'dis_v2',	0x2 ],\n"+
 						"];\n"+
 						"\n"+
 						"var ret= ht.bindByName('divResult3',myObj,myConfig);\n" +
