change to standard commonJs module

--- a/test/test.html
+++ b/test/test.html
@@ -3,7 +3,7 @@
 <meta charset='utf-8'>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes" />
 
-<script src='../htm-tool.js' htm-tool-var-name='ht'></script>
+<script src='../release/bundle.js'></script>
 
 </head>
 <body onload="onBodyLoad()">
@@ -26,6 +26,7 @@
 
 </body>
 <script>
+	var ht= require( "htm-tool" );
 	
 	var itemSet={
 		"ele()": "ht.ele('divResult')===document.getElementById('divResult') && \n\tht.ele(document.getElementById('divResult'))===document.getElementById('divResult')",
